<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/activity_bmr"
    tools:context="hamano.masashi.health_check.BmrActivity">

    <TextView
        android:id="@+id/tvTall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calBMR"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="1dp"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            android:layout_weight="1"
            android:textSize="15dp"
            />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_weight="1"
            android:textSize="15dp"
            />

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:ems="6"
        android:inputType="number"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textStyle="bold"
        />

    <Button
        android:shape="oval"
        android:id="@+id/Tcalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/calculate"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@drawable/frame_style"/>


    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        />


</LinearLayout>

